--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 
                      <meta charset="utf-8">
+      <style>
+body {background-color: orangered;}
+h1   {color: black;}
+p    {color: black;}
+</style>
+
       <title>HALLOWEEN</title>
              </head>
 <body>
