--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ p    {color: black;}
 <body>
       <h1>My Favorite Halloween Songs</h1>
       <p>These are my favorite Halloween Songs:</p>
-                   
+      <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">   1. Haunted - Beyonce</a></p>
+      
+      <img src="Skeleton.png" alt="Skeleton Dancing">
              </body>
 </html>
